<resources>
    <string name="about">According to the article 13 of the General Data Protection Regulation
(GDPR), we give in the following information on the data we collect.\n\n

 The ElectroSmart app is collecting the following data:\n
    - the signal received power measured periodically by the
    smartphone, e.g., every 20 minutes. Measured signals can be,
    depending on the smartphone compatibility, Wi-Fi, Bluetooth, GSM,
    CDMA, 3G, 4G, and 5G;\n
    - information on the emitting infrastructures (access point name,
    base station ID, etc.);\n
    - the localisation and the orientation of your smartphone when the
    measurement is made;\n
    - the smartphone brand, model, and Android version;\n
    - information on you app usage;\n
    - information you accept to share with use, such as first
    name, email address, age, sex, how do you feel with waves.\n\n

        To provide daily statistics and exposure alerts,
         ElectroSmart accesses and collects the data described above in the background. This
         includes background location.\n\n

    </string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_measure">Home</string>
    <string name="nav_instrument">Instrument</string>
    <string name="nav_encourage_us">Encourage us</string>
    <string name="nav_tell_your_friends">Tell your friends</string>
    <string name="nav_send_to">Send to</string>
    <string name="nav_invite_text">Hi there, I am using an awesome app to reduce my exposure to EMF. I highly recommend you to give it a try. Download it at https://electrosmart.app/</string>
    <string name="nav_give_us_feedback">Give us feedback</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_encourage_us_err_title">No browser found</string>
    <string name="nav_encourage_us_err_text">You need a Web browser to access the Google Play Store
        and leave us stars. You can directly access it at &es_playstore_url;
    </string>
    <string name="nav_csv_export_title">Export as CSV</string>
    <string name="nav_bottom_bar_live">Live</string>
    <string name="nav_bottom_bar_solutions">Solutions</string>
    <string name="nav_bottom_bar_statistics">Statistics</string>
    <string name="title_activity_es_setting">Settings</string>
    <string name="title_activity_es_terms_of_use">Terms of Use</string>
    <string name="title_activity_es_feedback">Feedback</string>
    <string name="title_activity_es_help">Help</string>
    <string name="title_activity_es_metrics_help">Exposure Units</string>
    <string name="title_activity_es_about">About</string>
    <string name="agree_settings_terms">Terms of use and privacy policy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_metric_title_escore">Understand the exposure</string>
    <string name="dialog_metric_title_dBm">Understand the dBm</string>
    <string name="dialog_metric_title_watt">Understand the Watt</string>
    <string name="dialog_metric_description_escore">Your <i>exposure</i> value is a simple and intuitive score from 0 to 100.\n\nFor instance:
    </string>
    <string name="dialog_metric_description_dBm"><i>dBm</i> is a widely used unit to measure
        power.\n\nWhen the dBm value decreases by 3, your exposure is halved.\n\nFor
        instance:
    </string>
    <string name="dialog_metric_description_power"><i>Watt</i> is the standard unit
        of Power.\n\nFor instance:
    </string>
    <string name="dialog_metric_starred_text">Measurements made with
        a Wi-Fi access point in a controlled environment (anechoic chamber)
    </string>
    <string name="dialog_metric_table_header_distance">Distance</string>
    <string name="dialog_metric_table_distance_content">5cm\n 5m \n10m</string>
    <string name="dialog_metric_text_escore">Exposure index</string>
    <string name="dialog_metric_text_dBm">dBm</string>
    <string name="dialog_metric_text_power">Watt</string>
    <string name="dialog_metric_table_metric_content_escore">90/100\n60/100\n40/100</string>
    <string name="dialog_metric_table_metric_content_dBm">-5\n-50\n-80</string>
    <string name="dialog_metric_table_metric_content_power">316.2 μW\n10.0 nW\n10.0 pW</string>
    <string name="dialog_metric_imageView_router_contentDescription">Router image</string>
    <string name="icon_description_metrics_help">Exposure units help icon</string>
    <string name="feedback_type_chooser_title">Choose a category of feedback</string>
    <string name="feedback_send_button_text">Send by email</string>
    <string name="feedback_message_input_hint">Write your feedback here</string>
    <string name="feedback_profileid_checkbox_text">Send my profile ID</string>
    <string name="settings_preference_background_wifi_scan_text">Wi-Fi Background Scan</string>
    <string name="settings_preference_background_wifi_scan_text_summary">Scan Wi-Fi in background
        even if Wi-Fi is disabled</string>
    <string name="settings_preference_advanced_mode">Advanced Mode</string>
    <string name="settings_preference_advanced_mode_summary">Advanced signal information for
        expert users</string>
    <string name="settings_preference_debug_title">Debug Settings</string>
    <string name="settings_preference_sync_in_cellular">Cellular Synchronization</string>
    <string name="settings_preference_sync_in_cellular_summary">Synchronize your measurements using
        cellular</string>
    <string name="settings_preference_do_aggressive_wifi_scan">Wi-Fi</string>
    <string name="settings_preference_do_aggressive_wifi_scan_summary">Use aggressive scan strategy</string>
    <string name="settings_preference_do_aggressive_bt_scan">Bluetooth</string>
    <string name="settings_preference_do_aggressive_bt_scan_summary">Use aggressive scan strategy</string>
    <string name="settings_preference_do_measurement_cycle_background">Background Measurement Cycle</string>
    <string name="settings_preference_do_measurement_cycle_background_summary">Time between two
        scans when the application is idle</string>
    <string name="settings_preference_wardrive_mode">Wardrive and Anechoic Mode</string>
    <string name="settings_preference_wardrive_mode_summary">This mode suspends the hysteresis used
        for the display in current mode and keeps the screen always on</string>
    <string name="settings_preference_exposure_metric">Exposure Unit</string>
    <string name="settings_preference_exposure_metric_summary">%s</string>
    <string name="settings_preference_notification_exposure">Enable the notification</string>
    <string name="settings_preference_notification_exposure_summary">Notify when your exposure
        exceeds the threshold</string>
    <string name="settings_preference_notification_importance">Notification Importance</string>
    <string name="settings_preference_notification_importance_summary">%s</string>
    <string name="settings_preference_protection_test_duration">Protection test duration</string>
    <string name="settings_preference_protection_test_duration_summary">The duration in seconds to
        run a protection test</string>
    <string name="settings_preference_show_instrument">Show Instrument</string>
    <string name="settings_preference_show_instrument_summary">Gives access to the instrument legacy
        tool in the menu</string>
    <string name="settings_preference_enable_bt_automatically">Automatically enable Bluetooth</string>
    <string name="settings_preference_enable_bt_automatically_summary">Enable Bluetooth when you start the app and revert it back when you leave the app</string>
    <string name="settings_preference_history_nb_days">Max. number of days in statistics</string>
    <string name="settings_preference_history_nb_days_summary">%s\nWarning: if you reduce the number of days, your oldest statistics will be permanently deleted</string>
    <string name="settings_preference_high_exposure_notif_title">Exposure alert notification</string>
    <string name="settings_preference_new_source_notif_title">New source detected notification</string>
    <string name="settings_preference_notification_new_source">Enable the notification</string>
    <string name="setting_preference_notification_new_source_summary">Notify when a new source is
        detected in my daily statistics</string>
    <string name="settings_preference_dark_mode_title">Force dark theme</string>
    <string name="settings_preference_dark_mode_summary">Force the dark theme or follow the system preferences</string>
    <string name="onboarding_name_question">What is your first name?</string>
    <string name="onboarding_email_question">What is your email?</string>
    <string name="onboarding_sex_question">What is your sex?</string>
    <string name="onboarding_age_question">How old are you?</string>
    <string name="onboarding_sex_male">Male</string>
    <string name="onboarding_sex_female">Female</string>
    <string name="onboarding_segment_electrosensitive"> I\'m electrosensitive</string>
    <string name="onboarding_segment_concerned">I\'m afraid of waves</string>
    <string name="onboarding_segment_curious">I\'m just curious</string>
    <string name="profile_activity_btnclear_text">CLEAR</string>
    <string name="profile_segment_question">How do you feel about waves?</string>
    <string name="PREF_KEY_BACKGROUND_WIFI_SCAN" translatable="false">PREF_KEY_BACKGROUND_WIFI_SCAN</string>
    <string name="PREF_KEY_AGGRESSIVE_WIFI_SCAN" translatable="false">PREF_KEY_AGGRESSIVE_WIFI_SCAN</string>
    <string name="PREF_KEY_ADVANCED_MODE" translatable="false">PREF_KEY_ADVANCED_MODE</string>
    <string name="PREF_KEY_SHOW_INSTRUMENT" translatable="false">PREF_KEY_SHOW_INSTRUMENT</string>
    <string name="PREF_KEY_ENABLE_BT_AUTOMATICALLY" translatable="false">PREF_KEY_ENABLE_BT_AUTOMATICALLY</string>
    <string name="PREF_KEY_NUMBER_OF_DAYS_IN_HISTORY" translatable="false">PREF_KEY_NUMBER_OF_DAYS_IN_HISTORY</string>
    <string name="PREF_KEY_AGGRESSIVE_BT_SCAN" translatable="false">PREF_KEY_AGGRESSIVE_BT_SCAN</string>
    <string name="PREF_KEY_DEBUG_SETTINGS" translatable="false">PREF_KEY_DEBUG_SETTINGS</string>
    <string name="PREF_KEY_MEASUREMENT_CYCLE_BACKGROUND" translatable="false">PREF_KEY_BACKGROUND_SCAN_PERIOD</string>
    <string name="PREF_KEY_WARDRIVE_MODE" translatable="false">PREF_KEY_WARDRIVE_MODE</string>
    <string name="PREF_KEY_SYNC_CELLULAR" translatable="false">PREF_KEY_SYNC_CELLULAR</string>
    <string name="PREF_KEY_EXPOSURE_METRIC" translatable="false">PREF_KEY_EXPOSURE_METRIC</string>
    <string name="PREF_KEY_DARK_MODE" translatable="false">PREF_KEY_DARK_MODE</string>
    <string name="PREF_KEY_NOTIFICATION_HIGH_EXPOSURE_CATEGORY" translatable="false">PREF_KEY_NOTIFICATION_HIGH_EXPOSURE_CATEGORY</string>
    <string name="PREF_KEY_NOTIFICATION_EXPOSURE" translatable="false">PREF_KEY_NOTIFICATION_EXPOSURE</string>
    <string name="PREF_KEY_NOTIFICATION_EXPOSURE_IMPORTANCE" translatable="false">PREF_KEY_NOTIFICATION_EXPOSURE_IMPORTANCE</string>
    <string name="PREF_KEY_NOTIFICATION_EXPOSURE_THRESHOLD" translatable="false">PREF_KEY_NOTIFICATION_EXPOSURE_THRESHOLD</string>
    <string name="PREF_KEY_NOTIFICATION_NEW_SOURCE_CATEGORY" translatable="false">PREF_KEY_NOTIFICATION_NEW_SOURCE_CATEGORY</string>
    <string name="PREF_KEY_NOTIFICATION_NEW_SOURCE" translatable="false">PREF_KEY_NOTIFICATION_NEW_SOURCE</string>
    <string name="PREF_KEY_NOTIFICATION_NEW_SOURCE_IMPORTANCE" translatable="false">PREF_KEY_NOTIFICATION_NEW_SOURCE_IMPORTANCE</string>
    <string name="PREF_KEY_PROTECTION_TEST_DURATION" translatable="false">PREF_KEY_PROTECTION_TEST_DURATION</string>
    <string name="PREF_VALUE_NOTIFICATION_IMPORTANCE_NONE" translatable="false">PREF_VALUE_NOTIFICATION_IMPORTANCE_NONE</string>
</resources>