<?xml version="1.0" encoding="utf-8"?>

<!--
    BSD 3-Clause License

    Copyright (c) 2014-2022, Arnaud Legout (arnaudlegout), centre Inria de
    l'Université Côte d'Azur, France. Contact: arnaud.legout@inria.fr
    All rights reserved.

    Redistribution and use in source and binary forms, with or without
    modification, are permitted provided that the following conditions are met:

    1. Redistributions of source code must retain the above copyright notice, this
    list of conditions and the following disclaimer.

    2. Redistributions in binary form must reproduce the above copyright notice,
    this list of conditions and the following disclaimer in the documentation
    and/or other materials provided with the distribution.

    3. Neither the name of the copyright holder nor the names of its
    contributors may be used to endorse or promote products derived from
    this software without specific prior written permission.

    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
    AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
    IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
    DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
    FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
    DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
    SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
    CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
    OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
    OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!--
    It is possible to add the header as a separate layout in the app_main_layout specifying
    app:headerLayout attribute. However, doing that has one disadvantage that for a white background
    there is no explicit divider or separator between the nav header and the first group in the
    menu. This would need to be handled by us.

    Adding app name as a menu item and setting enabled as false, we achieve a similar
    UI.
    -->
    <group
        android:id="@+id/nav_group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_measure" />

        <item
            android:id="@+id/nav_instrument"
            android:icon="@drawable/ic_view_list_black_36dp"
            android:title="@string/nav_instrument"
            android:visible="false" />
    </group>

    <group
        android:id="@+id/nav_group_middle"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_tell_your_friends"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/nav_tell_your_friends" />
        <item
            android:id="@+id/nav_encourage_us"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/nav_encourage_us" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/nav_give_us_feedback" />
    </group>

    <group
        android:id="@+id/nav_group_export"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_export"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/nav_csv_export_title" />
    </group>

    <group
        android:id="@+id/nav_group_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_help" />
    </group>


</menu>