<?xml version="1.0" encoding="utf-8"?><!--
    BSD 3-Clause License

    Copyright (c) 2014-2022, Arnaud Legout (arnaudlegout), centre Inria de
    l'Université Côte d'Azur, France. Contact: arnaud.legout@inria.fr
    All rights reserved.

    Redistribution and use in source and binary forms, with or without
    modification, are permitted provided that the following conditions are met:

    1. Redistributions of source code must retain the above copyright notice, this
    list of conditions and the following disclaimer.

    2. Redistributions in binary form must reproduce the above copyright notice,
    this list of conditions and the following disclaimer in the documentation
    and/or other materials provided with the distribution.

    3. Neither the name of the copyright holder nor the names of its
    contributors may be used to endorse or promote products derived from
    this software without specific prior written permission.

    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
    AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
    IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
    DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
    FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
    DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
    SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
    CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
    OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
    OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/edit_text_name"
        style="@style/PrimaryTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:autofillHints="name"
        android:hint="@string/onboarding_name_question"
        android:inputType="textPersonName"
        android:maxLength="@integer/profile_name_max_length" />

    <EditText
        android:id="@+id/edit_text_email"
        style="@style/PrimaryTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:autofillHints="emailAddress"
        android:hint="@string/onboarding_email_question"
        android:inputType="textEmailAddress"
        android:maxLength="@integer/profile_email_max_length" />

    <EditText
        android:id="@+id/edit_text_age"
        style="@style/PrimaryTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:hint="@string/onboarding_age_question"
        android:inputType="number"
        android:maxLength="@integer/profile_age_max_length" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/SectionTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_sex_question" />

        <RadioGroup
            android:id="@+id/radiogroup_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="25dip"
            android:paddingLeft="25dip"
            android:paddingEnd="25dip"
            android:paddingRight="25dip">

            <RadioButton
                android:id="@+id/radio_sex_male"
                style="@style/PrimaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_sex_male" />

            <RadioButton
                android:id="@+id/radio_sex_female"
                style="@style/PrimaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_sex_female" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/SectionTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_segment_question" />

        <RadioGroup
            android:id="@+id/radiogroup_user_segment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="25dip"
            android:paddingLeft="25dip"
            android:paddingEnd="25dip"
            android:paddingRight="25dip">

            <RadioButton
                android:id="@+id/radio_user_segment_electrosensible"
                style="@style/PrimaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_segment_electrosensitive" />

            <RadioButton
                android:id="@+id/radio_user_segment_concerned"
                style="@style/PrimaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_segment_concerned" />

            <RadioButton
                android:id="@+id/radio_user_segment_curious"
                style="@style/PrimaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_segment_curious" />
        </RadioGroup>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_clear"
        style="@style/PrimaryButtonStyle"
        android:text="@string/profile_activity_btnclear_text" />

</LinearLayout>
